# study-taipy

./: .gitignore  README.md  config.toml  pyproject.toml
note/: dataframe_concat.ipynb
src/study_taipy/: firstweb.py
src/study_taipy/web/: nlpweb.py  nlpweb_layout.py
