[project]
name = "study-taipy"
version = "0.1.0"
description = "https://docs.taipy.io/en/latest/getting_started/getting-started-gui/step_01/ReadMe/"
authors = [{ name = "dmario24", email = "data.mario24@gmail.com" }]
dependencies = [
    "taipy>=2.4.0",
    "torch>=2.0.1",
    "transformers>=4.33.1",
    "scipy>=1.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
ctest = "pytest --cov"
ptest = "pytest -s"
test = "pytest"
runweb = "python src/study_taipy/web/firstweb.py"

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
]
